fix gap elementi iFogn SE (display width 375)

--- a/src/app/components/main-content/main-content.component.css
+++ b/src/app/components/main-content/main-content.component.css
@@ -25,7 +25,7 @@
   list-style: none;
   flex-basis: 100%;
   display: flex;
-  gap: 40px;
+  gap: 35px;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
